add event of click

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
                     					c0,4.893,3.981,8.873,8.873,8.873h113.608l51.74-84.908H173.331z" />
                             </g>
                         </g>
-                        <g id="buttons">
+                        <g id="buttons" data-js="buttons-js">
                             <g class="btn-ac">
                                 <linearGradient id="SVGID_61_" gradientUnits="userSpaceOnUse" x1="187.7412" y1="268.6016" x2="187.7412" y2="250.5344">
                                     <stop offset="0" style="stop-color:#FFFFFF" />
@@ -1617,7 +1617,7 @@
                     					h41.93c4.881,0,8.854,3.971,8.854,8.852v31.404c0,4.883-3.973,8.854-8.854,8.854H393.33z" />
                             </g>
                         </g>
-                        <g id="parts">
+                        <g id="parts" data-js="parts-js">
                             <g class="btn-ac">
                                 <path fill="#DBDBDB" d="M168.274,247.516l7.697-20.043h2.857l8.203,20.043h-3.021l-2.338-6.07h-8.381l-2.201,6.07H168.274z
                     					 M174.057,239.285h6.795l-2.092-5.551c-0.638-1.687-1.112-3.072-1.422-4.156c-0.255,1.285-0.615,2.561-1.08,3.828
